--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="sub-headings mb-4">Shopping bag</h2>
+                <h2 class="sub-headings mb-4 text-center">Shopping bag</h2>
                 <hr>
             </div>
         </div>
