--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,12 +1,12 @@
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+<div class="toast custom-toast" data-autohide="false">
 
-    <div class="toast-header">
+  <div class="toast-header bg-white">
       <strong class="mr-auto">Success!</strong>
       <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
+          <span aria-hidden="true">&times;</span>
       </button>
-    </div>
-    <div class="toast-body">
-      {{ message }}
-    </div>
   </div>
+  <div class="toast-body bg-white">
+      {{ message }}        
+  </div>
+</div>
