added stripe elements

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,3 +115,20 @@ a.category-badge > span.badge:hover {
         height: calc(100vh - 116px);
     }
 }
+
+.form-inline .search-field {
+    display:inline-block;
+    width:80%;
+    background:none;
+    border:none;
+    border-bottom:1px solid transparent;
+    border-radius:0;
+    color:#ccc;
+    box-shadow:none;
+    color:inherit;
+    transition:border-bottom-color 0.3s;
+  }
+
+  .form-inline .search-field:focus {
+    border-bottom:1px solid #ccc;
+  }
