--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <!--Bootstrap JS-->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>   
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
 {% endblock %}
 
 {% block extra_js %}
@@ -41,7 +43,13 @@
     <title>Of Stories {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-     <!--top navbar-->
+    
+<!-- Including the navbar in template -->
+
+{% include 'includes/main-nav.html' %}
+     
+
+    
     <header class="container-fluid fixed-top">
       <div class="row">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
@@ -51,11 +59,12 @@
               </a>
           </div>
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-              <form method="GET" action="{% url 'products' %}">
+              
+              <form class="form-inline mr-auto" method="GET" action="{% url 'products' %}">
                   <div class="input-group w-100">
-                      <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                      <input class="form-control search-field rounded-0" type="text" name="q" placeholder="Search our site">
                       <div class="input-group-append">
-                          <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                          <button class="form-control btn btn-black rounded-0" type="submit">
                               <span class="icon">
                                   <i class="fas fa-search"></i>
                               </span>
@@ -63,6 +72,7 @@
                       </div>
                   </div>
               </form>
+
           </div>
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
               <ul class="list-inline list-unstyled text-center text-lg-right my-0">
