added profile form, views and updated template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,6 +67,10 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
 /* Allauth form formatting */
 
 .allauth-form-inner-content p {
