added order history and updated checkout views

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -19,9 +19,9 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <hr>
-                <h2 class="sub-headings mb-4 text-center">Checkout</h2>
-                <hr>
+                
+                <h2 class="sub-heading mb-4 text-center">Checkout</h2>
+              
             </div>
         </div>
 
