--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,9 +15,9 @@
     <div class="container mb-2">
         <div class="row">
             <div class="col">
-                <hr>
-                <h2 class="sub-headings mb-4 text-center">Shopping bag</h2>
-                <hr>
+                
+                <h2 class="sub-heading mb-4 text-center">Shopping bag</h2>
+                
             </div>
         </div>
 
@@ -78,7 +78,7 @@
                                             </div>
                                         </form>
                                         <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
                                     </td>
                                     
                                     <td class="py-3">
