added product form

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -11,16 +11,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'home' %}" id="home-link">
+                    <a class="font-weight-bold nav-link text-black" href="{% url 'home' %}" id="home-link">
                         Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'account_signup' %}">Sign
+                    <a class="font-weight-bold nav-link text-black" href="{% url 'account_signup' %}">Sign
                         Up</a>
 
                 <li class="nav-item dropdown">
-                    <a class="logo-font font-weight-bold nav-link text-black dropdown-toggle" href="#"
+                    <a class="font-weight-bold nav-link text-black dropdown-toggle" href="#"
                         id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Account
                     </a>
@@ -40,7 +40,7 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="logo-font font-weight-bold nav-link text-black mr-5 dropdown-toggle" href="#"
+                    <a class="font-weight-bold nav-link text-black mr-5 dropdown-toggle" href="#"
                         id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Products
                     </a>
