added new styling to navbar and sub-headings

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* from Bulma */
@@ -19,12 +19,38 @@ body {
     width: 1.5rem;
 }
 
+nav ul li a {
+	color: black;
+}
+
+
+
+
+.menu {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 500;
+	font-size: 14px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	padding-right: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+
+}
+
+.menu a:hover {
+	color: #FC6A60;
+	background-color: transparent;
+}
+
 .heading {
     text-transform: uppercase;
 }
 
 .sub-heading{
     text-transform: uppercase;
+    font-size: 24px;
+    letter-spacing: 2px;
 }
 
 .main-logo-link {
@@ -38,6 +64,16 @@ body {
 }
 
 .overlay{
+    height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: #F2F1EF;
+	z-index: -1;
+}
+
+.overlay-products{
     height: 100%;
 	width: 100%;
 	top: 0;
