--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,11 +10,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
+<div class="overlay-products"></div>
 <div class="container-fluid">
     <div class="row">
         <div class="col text-center mt-3">
-            <h2 class="logo-font">Products</h2>
+            <h2 class="sub-heading">Products</h2>
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                 <span
