--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,10 +13,13 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
+            
                 <h1 class="display-4 heading text-black">
-                    The new collections are here
+                    Peru Collection
                 </h1>
-                <div class="my-5">
+                <hr>
+                <h3 class="text-center">9° 11' 42" S / 74° 59' 25" W</h4>
+                <div class="my-5 text-center">
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                     </h4>
