--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,15 @@
     <title>Of Stories {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
+
+
+      <div id="delivery-banner" class="row text-center">
+        <div class="col">
+            <h4 class="my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+        </div>            
+    </div>
+
+  
     
 <!-- Including the navbar in template -->
 
