--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,7 +5,7 @@
         <a class="navbar-brand" href="{% url 'home' %}">
             <img src="media/logo.png" alt="" width="175" height="40">
         </a>
-        <button class="navbar-toggler navbar-light bg-light menu" type="button" data-toggle="collapse"
+        <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
