changed img src for logo

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg menu">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="media/logo.png" alt="" width="175" height="40">
+            <img src="{{ MEDIA_URL }}logo.png"alt="" width="175" height="40">
         </a>
         <button class="navbar-toggler navbar-light bg-light" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
