added overlay-white as background

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay-products"></div>
+<div class="overlay-white"></div>
 <div class="container-fluid">
     <div class="row">
         <div class="col text-center mt-3">
