--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
+<div class="overlay-white"></div>
     <div class="container mb-2">
         <div class="row">
             <div class="col">
@@ -139,14 +139,15 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('product_size');
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken};
+        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
 
         $.post(url, data)
          .done(function() {
              location.reload();
          });
-    });
+    })
 </script>
 
 {% endblock %}
