--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,11 +1,11 @@
-<a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+<a href="{% url 'products' %}" class="btn btn-sm rounded-0">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
-<a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-    <span class="text-uppercase">Secure Checkout</span>
+<a href="{% url 'checkout' %}" class="btn btn-sm rounded-0">
+    <span class="text-uppercase">Checkout</span>
     <span class="icon">
         <i class="fas fa-lock"></i>
     </span>
