--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay-products"></div>
+    <div class="overlay-white"></div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
