--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-<h2 class="sub-heading mb-4">{% trans "Sign In" %}</h2>
+<h2 class="sub-heading mb-4">{% trans "Log In" %}</h2>
 
 {% get_providers as socialaccount_providers %}
 
@@ -29,8 +29,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+<p>{% blocktrans %}Don't have a login?
+<a href="{{ signup_url }}">Register Now</a>{% endblocktrans %}</p>
 {% endif %}
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
