--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -55,7 +55,7 @@
         
             <!-- search field -->
             <form class="form-inline d-flex" method="GET" action="{% url 'products' %}">
-                <input class="form-control mr-sm-2" type="text" name="q" placeholder="Search" aria-label="Search">
+                <input class="rounded-0 form-control mr-sm-2" type="text" name="q" placeholder="Search" aria-label="Search">
                 <button class="btn rounded-0" type="submit">
                     <span class="icon">
                         <i class="fas fa-search"></i>
@@ -66,8 +66,8 @@
             <!-- shopping cart -->
             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                 href="{% url 'view_bag' %}">
-                <div class="text-center shopping-bag">
-                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <div class="shopping-bag text-lg-center">
+                    <div><i class="my-0 fas fa-shopping-bag fa-lg"></i></div>
                     <p class="my-0">
                         {% if grand_total %}
                         ${{ grand_total|floatformat:2 }}
