added blog templates

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -50,6 +50,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'blog' %}" class="dropdown-item">Stories</a>
+                </li>
                 {% endif %}
             </ul>
         
