--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,9 +57,6 @@ nav ul li a {
 	background-color: transparent;
 }
 
-.shopping-bag{
-
-}
 
 /* -------------------------------- other */
 
@@ -202,6 +199,27 @@ input[name='q']::placeholder {
 .custom-toast {
     overflow: visible;
 }
+/* ------------------------------- blog */
+
+.card {
+    box-shadow: 0 16px 48px #E3E7EB;
+}
+
+.shadow {
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
+}
+.btn-danger {
+    color: #fff;
+    background-color: #f00000;
+    border-color: #dc281e;
+}
+.masthead {
+    background: #3398E1;
+    height: auto;
+    padding-bottom: 15px;
+    box-shadow: 0 16px 48px #E3E7EB;
+    padding-top: 10px;
+}
 
 /* ------------------------------- product form */
 
@@ -275,7 +293,7 @@ input[name='q']::placeholder {
       }
   
       .header-container {
-          padding-top: 80px;
+          padding-top: 60px;
       }
 
       .shopping-bag{
