--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,10 @@
     {% block content %}
     {% endblock %}
 
+  <!-- Including footer -->
+
+  {% include 'includes/footer.html' %}
+
     {% block postloadjs %}
 
     
