--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -15,12 +15,12 @@
 <div class="container mb-2">
     <div class="row">
         <div class=" col-md-8 col-md-10 mx-auto">
-            <div class="site-heading">
+           
                 <h2 class="sub-heading mb-4 text-center">Stories</h2>
 
-                <p class="text-center">We Love Django As much as you do..! &nbsp
+                <p class="text-center">Write something here &nbsp
                 </p>
-            </div>
+            
         </div>
 
     </div>
@@ -33,8 +33,8 @@
             {% for post in post_list %}
             <div class="card mb-4">
                 <div class="card-body">
-                    <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
+                    <h2 class="card-title"><a href="{% url 'post_detail' post.slug  %}">{{ post.title }}</a></h2>
+                    <p class="card-text text-muted h6">{{ post.author.first_name }} | {{ post.created_on}} </p>
                     <p class="card-text">{{post.content|slice:":200" }}</p>
                     <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
                 </div>
