--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} 
+{% block extra_title %} | {{ object.title }}{% endblock %}
 {% block content %}
 
 
@@ -16,7 +17,7 @@
     <div class="col-md-8 card mb-4  mt-3 left  top">
       <div class="card-body">
         <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
-        <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
+        <p class=" text-muted">{{ post.author.first_name }} | {{ post.created_on }}</p>
         <p class="card-text ">{{ object.content | safe }}</p>
         <a href="{% url 'blog'  %}" class="btn btn-primary"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
       </div>
