--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'add_product' %}" class="dropdown-item">Add Products</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'add_post' %}" class="dropdown-item">Add Blogpost</a>
+                </li>
                 {% endif %}
                 <!-- nav links showing only if user is logged in -->
                 {% if request.user.is_authenticated %}
