added function for editing blog post

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -33,10 +33,11 @@
             {% for post in post_list %}
             <div class="card mb-4">
                 <div class="card-body">
-                    <h2 class="card-title"><a href="{% url 'post_detail' post.slug  %}">{{ post.title }}</a></h2>
+                    <h2 class="card-title"><a href="{% url 'post_detail' post.pk  %}">{{ post.title }}</a></h2>
                     <p class="card-text text-muted h6">{{ post.author.first_name }} | {{ post.created_on}} </p>
                     <p class="card-text">{{post.content|slice:":200" }}</p>
-                    <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+                    <a href="{% url 'post_detail' post.pk  %}" class="btn btn-primary">Read More &rarr;</a>
+                    <a href="{% url 'edit_post' post.pk  %}" class="btn btn-primary">Edit Post</a>
                 </div>
             </div>
             {% endfor %}
