--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,7 +19,8 @@
         <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
         <p class=" text-muted">{{ post.author.first_name }} | {{ post.created_on }}</p>
         <p class="card-text ">{{ object.content | safe }}</p>
-        <a href="{% url 'blog'  %}" class="btn btn-primary"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
+        <a href="{% url 'blog' %}" class="btn btn-primary"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
+        <a href="{% url 'edit_post' post.pk %}" class="btn btn-primary">Edit Post</a>
       </div>
     </div>
   </div>
