--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -21,6 +21,7 @@
         <p class="card-text ">{{ object.content | safe }}</p>
         <a href="{% url 'blog' %}" class="btn btn-primary"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
         <a href="{% url 'edit_post' post.pk %}" class="btn btn-primary">Edit Post</a>
+        <a href="{% url 'delete_post' post.pk  %}" class="btn btn-primary">Delete Post</a>
       </div>
     </div>
   </div>
