--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,7 @@
-<!-- navbar template with bootstrap navbar -->
 
-<nav class="navbar navbar-expand-lg menu">
+
+<!-- navbar template with bootstrap navbar -->
+<nav class="navbar navbar-light navbar-expand-lg menu">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">
             <img src="{{ MEDIA_URL }}logo.png"alt="" width="175" height="40">
