--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -3,7 +3,7 @@
 
 
 {% block page_header %}
-<div class="container header-container">
+<div class="container">
     <div class="row">
         <div class="col"></div>
     </div>
@@ -14,15 +14,10 @@
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
-        <div class=" col-md-8 col-md-10 mx-auto">
-           
+        <div class="col-md-8 col-md-10 mx-auto">
                 <h2 class="sub-heading mb-4 text-center">Stories</h2>
-
-                <p class="text-center">Write something here &nbsp
-                </p>
-            
+                <p class="text-center">Write something here &nbsp</p>
         </div>
-
     </div>
 </div>
 
