--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,16 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-    <div class="container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
+
 
 {% block content %}
-    <div class="container-fluid h-100 header-container">
+    <div class="container-fluid h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
             
