--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,17 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-{% endblock %}
 
 {% block content %}
 <div class="overlay-white"></div>
-<div class="container-fluid">
+<div class="container-fluid header-container">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="sub-heading">Products</h2>
