--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,12 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+h2{
+    font-size: 20px;
+    letter-spacing: 2px;
+    text-transform:uppercase;
+}
+
 h3{
     font-size: 18px;
     letter-spacing: 2px;
@@ -18,6 +24,10 @@ h3{
 h4{
     font-size: 14px;
     font-weight: 200;  
+}
+
+a {
+    color: #555;
 }
 
 .btn{
@@ -43,7 +53,7 @@ nav ul li a {
 
 .menu, .shopping-bag {
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
+	font-weight: 500;
 	font-size: 14px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -221,6 +231,19 @@ input[name='q']::placeholder {
     background-color: #f00000;
     border-color: #dc281e;
 }
+
+.btn-blog {
+    color: #555;
+    background-color: transparent;
+    text-transform: uppercase;
+    font-size: 14px;
+    padding-left: 0;
+}
+a.btn.btn-blog:hover {
+	color: #81665f;
+    text-decoration: none;
+}
+
 .masthead {
     background: #3398E1;
     height: auto;
@@ -229,6 +252,10 @@ input[name='q']::placeholder {
     padding-top: 10px;
 }
 
+.card-title a:hover {
+	color: #81665f;
+    text-decoration: none;
+}
 /* ------------------------------- product form */
 
 .btn-file {
