--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,24 +2,15 @@
 {% block extra_title %} | {{ object.title }}{% endblock %}
 {% block content %}
 
-
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-{% endblock %}
-
 <div class="overlay"></div>
-<div class="container mb-2">
+<div class="container mb-2 header-container">
   <div class="row">
-    <div class="col-md-8 card mb-4  mt-3 left  top">
+    <div class="col-md-8 card mb-4  mt-3 left top">
       <div class="card-body">
-        <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
+        <h2>{% block title %} {{ object.title }} {% endblock title %}</h2>
         <p class=" text-muted">{{ post.author.first_name }} | {{ post.created_on }}</p>
         <p class="card-text ">{{ object.content | safe }}</p>
-        <a href="{% url 'blog' %}" class="btn btn-primary"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
+        <a href="{% url 'blog' %}" class="btn btn-blog"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
         {% if request.user.is_superuser %}
         <a href="{% url 'edit_post' post.pk %}" class="btn btn-primary">Edit Post</a>
         <a href="{% url 'delete_post' post.pk  %}" class="btn btn-primary">Delete Post</a>
