--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -23,13 +23,16 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title"><a href="{% url 'post_detail' post.pk  %}">{{ post.title }}</a></h2>
+                    {% if request.user.is_superuser %}
+                    <small>
+                        <a href="{% url 'edit_post' post.pk  %}">Edit Post</a> |
+                        <a class="text-danger" href="{% url 'delete_post' post.pk  %}">Delete Post</a>
+                    </small>
+                    {% endif %}
                     <p class="card-text text-muted h6">{{ post.author.first_name }} | {{ post.created_on}} </p>
                     <p class="card-text">{{post.content|slice:":200" }}</p>
                     <a href="{% url 'post_detail' post.pk  %}" class="btn btn-blog">Read More <i class="fas fa-angle-double-right"></i> </a>
-                    {% if request.user.is_superuser %}
-                    <a href="{% url 'edit_post' post.pk  %}" class="btn btn-blog">Edit Post <i class="fas fa-angle-double-right"></i></a>
-                    <a href="{% url 'delete_post' post.pk  %}" class="btn btn-blog">Delete Post <i class="fas fa-angle-double-right"></i></a>
-                    {% endif %}
+                    
                 </div>
             </div>
             {% endfor %}
