--- a/blog/templates/blog/delete_post.html
+++ b/blog/templates/blog/delete_post.html
@@ -14,20 +14,20 @@
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
-        <div class=" col-md-8 col-md-10 mx-auto">
+        <div class="col-md-8 col-md-10 mx-auto">
                 <h2 class="sub-heading mb-4 text-center">Delete Blog Post</h2>
-                <h3 class="text-center">Are you sure you want to delete:<strong>{{ post.title }}</strong>?</h3>
+                <h3 class="text-center">Are you sure you want to delete:<br><strong>{{ post.title }}</strong>?</h3>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-md-6">
+    <div class="row padding-row">
+        <div class="col-12 col-md-6 mx-auto mt-3">
             <form method="POST" action="{% url 'delete_post' post.pk  %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 
                 <div class="text-center">
-                    <a class="btn rounded-0" href="{% url 'blog' %}">Cancel</a>
-                    <button class="btn rounded-0" type="submit">Delete Post</button>
+                    <a class="btn rounded-0" href="{% url 'blog' %}"><i class="fas fa-angle-double-left"></i> No, go back</a>
+                    <button class="btn rounded-0" type="submit">Yes, Delete Post <i class="far fa-trash-alt"></i></button>
                 </div>
             </form>
         </div>            
