--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,25 +5,18 @@
     <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container header-container">
         <div class="row">
             <div class="col">
                 
-                <h2 class="logo-font mb-4 text-center">My Profile</h2>
+                <h2 class="sub-heading mb-4 text-center">My Profile</h2>
               
             </div>
         </div>
-            <div class="row">
+            <div class="row padding-row">
                 <div class="col-12 col-lg-6">
                     <p class="text-muted">Default Delivery Information</p>
                     <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
@@ -73,8 +66,8 @@
                     </div>
                 </div>
             </div>
-
-
+        </div>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
