--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -15,8 +15,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <a class="btn rounded-0" href="{% url 'home' %}">Cancel</a>
+  <button type="submit btn">{% trans 'Sign Out' %}</button>
 </form>
 
 
